[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "google-api-python-client>=2.173.0",
    "pyperclip>=1.9.0",
    "streamlit>=1.46.0",
    "trafilatura>=2.0.0",
    "yt-dlp>=2025.6.9",
]
